# sireader

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  sireader.py  sportident.py  test_sportident.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bumpversion.yml  check.yml  pypi.yml
