[tool.poetry]
name = "sportident"
version = "1.2.6"
description = "Python module to communicate with SportIdent main stations"
authors = ["Danil Akhtarov <help@o-ural.ru>"]
license = "GPLv3+"
readme = 'README.md'
repository = "https://github.com/sportorg/sireader"
homepage = "https://pypi.org/project/sportident"
keywords = ["sportident", "orienteering", "sportorg"]
classifiers = [
    # How mature is this project? Common values are
    'Development Status :: 5 - Production/Stable',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: System :: Hardware :: Hardware Drivers',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.6',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.4"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
allure-pytest = "^2.6.4"
autoflake = "^1.3"
black = "=19.3b0"
flake8 = "^3.7"
flake8-builtins = "^1.4"
flake8-comprehensions = "^1.4"
flake8-eradicate = "^0.2.0"
flake8-isort = "^2.6"
flake8-logging-format = "^0.6.0"
flake8-print = "^3.1"
flake8-pytest = "^1.3"
flake8-pytest-style = "^0.1.3"
flake8-quotes = "^1.0"
flake8-return = "^1.0"
isort = {version = "^4.3",extras = ["pyproject"]}
mypy = "*"
pep8-naming = "^0.8.0"
pylint = "^2.2"
pytest = "^4.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
responses = "^0.10.9"
safety = "^1.8"
teamcity-messages = "^1.21"
unify = "^0.4.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
