[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.8"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "chore(release): version $current_version → $new_version"
update_changelog_on_bump = true

[tool.poetry]
name = "sportident"
version = "1.2.8"
description = "Python module to communicate with SportIdent main stations"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
repository = "https://github.com/sportorg/sireader"
homepage = "https://github.com/sportorg/sireader"
keywords = ["sportident", "orienteering", "sportorg"]
packages = [
    { include = "sportident.py" },
]

[tool.poetry.urls]
Changelog = "https://github.com/sportorg/sireader/blob/main/CHANGELOG.md/"

[tool.poetry.dependencies]
python = "^3.8.1"
pyserial = "*"
six = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.7.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.11.1"
ruff = "^0.2.2"

[tool.poetry.group.git.dependencies]
commitizen = "^3.12.0"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
omit = ["tests/*", "**/__main__.py", "**/.venv/*", "**/site-packages/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 20

[tool.pytest.ini_options]
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "DEBUG"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    # "UP",
    "YTT",
    # "ANN",
    "S",
    "BLE",
    # "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    # "PGH",
    "PL",
    "TRY",
    "RSE",
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "S101",
]
exclude = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
